test/modules/bradc/manymodules/manymodules.good
Error: Cannot find module 'z' (manymodules.chpl:11)
