test/modules/bradc/manymodules/manymodules.chpl
var x = 3;

// eventually, we want to make this actually use and call the other
// modules

use a;
use b;
use c;
use d;
use e;
use f;

proc main() {
  writeln("x is: ", x);
  runa();
  runb();
  runc();
  rund();
  runea();
  runeb();
  runf();
}
